--- a/user-login.html
+++ b/user-login.html
@@ -109,7 +109,7 @@
                                     <td class="py-1 px-2">A4 Bond Paper</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 245</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 245 reams</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -119,7 +119,7 @@
                                     <td class="py-1 px-2">Blue Ballpoint Pens</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 120</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 120 pcs</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -129,7 +129,7 @@
                                     <td class="py-1 px-2">Staples</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 8</span>
+                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 8 boxes</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -149,7 +149,7 @@
                                     <td class="py-1 px-2">Yellow Legal Pad</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 60</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 60 pads</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -159,7 +159,7 @@
                                     <td class="py-1 px-2">Whiteboard Marker</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 5</span>
+                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 5 pcs</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -169,7 +169,7 @@
                                     <td class="py-1 px-2">USB Flash Drive 16GB</td>
                                     <td class="py-1 px-2 text-gray-500">IT Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 30</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 30 pcs</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -179,7 +179,7 @@
                                     <td class="py-1 px-2">Ethernet Cable</td>
                                     <td class="py-1 px-2 text-gray-500">IT Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 15</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 15 pcs</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
@@ -189,7 +189,7 @@
                                     <td class="py-1 px-2">Filing Folder</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
                                     <td class="py-0.5 px-1">
-                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 100</span>
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 100 pcs</span>
                                     </td>
                                     <td class="py-0.5 px-1">
                                         <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
