fixed user dashboard modals etc

--- a/user-login.html
+++ b/user-login.html
@@ -28,7 +28,7 @@
                 <ul class="space-y-2 px-4">
                     <li><a href="#" class="block py-2 px-4 rounded bg-green-700">Dashboard</a></li>
                     <li><a href="user-new-request.html" class="block py-2 px-4 rounded hover:bg-green-700">New Request</a></li>
-                    <li><a href="user-requests.html" class="block py-2 px-4 rounded hover:bg-green-700">View All Requests</a></li>
+                    <li><a href="user-requests.html" class="block py-2 px-4 rounded hover:bg-green-700">My Requests</a></li>
                     <li><a href="user-browse-inventory.html" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Help</a></li>
@@ -100,7 +100,7 @@
                                 <tr class="text-left text-gray-600">
                                     <th class="py-1 px-2">Item</th>
                                     <th class="py-1 px-2">Classification</th>
-                                    <th class="py-1 px-2">In Stock</th>
+                                    <th class="py-1 px-2">Stock Availability</th>
                                     <th class="py-1 px-2"></th>
                                 </tr>
                             </thead>
@@ -231,15 +231,149 @@
                             <td class="border p-2">May 15, 2025</td>
                             <td class="border p-2 text-yellow-600">Pending</td>
                             <td class="border p-2">
-                                <a href="#" class="text-blue-600 hover:underline">View</a>
+                                <a href="#" class="text-blue-600 hover:underline view-request" 
+                                   data-request-id="#REQ-0124"
+                                   data-items="A4 Bond Paper x2, Stapler x1"
+                                   data-date="May 15, 2025"
+                                   data-status="Pending">View</a>
                                 <a href="#" class="text-red-600 hover:underline ml-2">Cancel</a>
                             </td>
                         </tr>
-                        <!-- Add more rows as needed -->
+                        <!-- Add more rows as needed, include data-* attributes for each -->
                     </tbody>
                 </table>
             </section>
+            <!-- Modal for Request Details -->
+            <div id="requestModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center z-50 hidden">
+                <div class="bg-white rounded-lg shadow-lg w-full max-w-2xl p-0 relative border-2 border-blue-400">
+                    <div class="flex justify-between items-center border-b px-6 py-4">
+                        <h3 class="text-lg font-bold text-gray-800">
+                            Request Details - <span id="modalRequestId">REQ-2023-001</span>
+                        </h3>
+                        <button id="closeModalBtn" class="text-gray-400 hover:text-gray-700 text-2xl">&times;</button>
+                    </div>
+                    <div class="px-6 py-4">
+                        <div class="grid grid-cols-2 gap-4 mb-2">
+                            <div>
+                                <div class="text-xs text-gray-500">Requested By</div>
+                                <div class="font-semibold text-sm text-gray-800">Daphnie Pelaez</div>
+                            </div>
+                            <div>
+                                <div class="text-xs text-gray-500">Department</div>
+                                <div class="font-semibold text-sm text-gray-800">College of Business Administration</div>
+                            </div>
+                            <div>
+                                <div class="text-xs text-gray-500">Request Date</div>
+                                <div class="font-semibold text-sm text-gray-800" id="modalRequestDate">May 15, 2023</div>
+                            </div>
+                            <div>
+                                <div class="text-xs text-gray-500">Status</div>
+                                <span id="modalStatus" class="inline-block bg-blue-100 text-blue-700 text-xs font-semibold px-3 py-1 rounded">Delivered</span>
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <div class="text-xs text-gray-500 mb-1">Request Description</div>
+                            <div class="bg-gray-50 rounded px-3 py-2 text-sm text-gray-700" id="modalDescription">
+                                <!-- You can make this dynamic if you have a description per request -->
+                                Request for office supplies needed for the new team members joining next week.
+                            </div>
+                        </div>
+                        <div class="mb-4">
+                            <div class="text-xs text-gray-500 mb-1">Requested Items</div>
+                            <table class="min-w-full text-xs border rounded">
+                                <thead>
+                                    <tr class="bg-gray-100 text-gray-600">
+                                        <th class="py-2 px-2 text-left font-semibold">Item</th>
+                                        <th class="py-2 px-2 text-left font-semibold">Quantity</th>
+                                        <th class="py-2 px-2 text-left font-semibold">Unit</th>
+                                        <th class="py-2 px-2 text-left font-semibold">Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="modalItemsTable">
+                                    <!-- Will be filled dynamically -->
+                                </tbody>
+                            </table>
+                        </div>
+                        <div>
+                            <div class="text-xs text-gray-500 mb-1">Request Timeline</div>
+                            <div class="space-y-3 text-xs">
+                                <div class="flex items-start space-x-2">
+                                    <span class="mt-1 w-3 h-3 rounded-full bg-blue-500 flex-shrink-0"></span>
+                                    <div>
+                                        <div class="font-semibold text-gray-700">Request Submitted</div>
+                                        <div class="text-gray-500">May 15, 2023 - 09:30 AM</div>
+                                        <div class="text-gray-400">Request for office supplies submitted by Daphnie Pelaez</div>
+                                    </div>
+                                </div>
+                                <div class="flex items-start space-x-2">
+                                    <span class="mt-1 w-3 h-3 rounded-full bg-yellow-400 flex-shrink-0"></span>
+                                    <div>
+                                        <div class="font-semibold text-gray-700">Processing</div>
+                                        <div class="text-gray-500">May 17, 2023 - 02:45 PM</div>
+                                        <div class="text-gray-400">Request being processed by Supply Department</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
+    <script>
+    // Modal functionality
+    document.querySelectorAll('.view-request').forEach(function(link) {
+        link.addEventListener('click', function(e) {
+            e.preventDefault();
+            // Fill modal fields from data attributes
+            document.getElementById('modalRequestId').textContent = this.dataset.requestId;
+            document.getElementById('modalRequestDate').textContent = this.dataset.date;
+            // Status coloring
+            var status = this.dataset.status || '';
+            var statusSpan = document.getElementById('modalStatus');
+            statusSpan.textContent = status;
+            statusSpan.className = "inline-block text-xs font-semibold px-3 py-1 rounded ";
+            if (status.toLowerCase() === 'pending') {
+                statusSpan.className += "bg-yellow-100 text-yellow-700";
+            } else if (status.toLowerCase() === 'approved') {
+                statusSpan.className += "bg-green-100 text-green-700";
+            } else if (status.toLowerCase() === 'delivered') {
+                statusSpan.className += "bg-blue-100 text-blue-700";
+            } else {
+                statusSpan.className += "bg-gray-100 text-gray-700";
+            }
+            // Fill items table (parse items string, e.g. "A4 Bond Paper x2, Stapler x1")
+            var itemsStr = this.dataset.items || '';
+            var itemsArr = itemsStr.split(',').map(function(item) { return item.trim(); });
+            var itemsHtml = '';
+            itemsArr.forEach(function(item) {
+                var match = item.match(/(.+?) x(\d+)/i);
+                if (match) {
+                    itemsHtml += `<tr class="border-t">
+                        <td class="py-2 px-2">${match[1]}</td>
+                        <td class="py-2 px-2">${match[2]}</td>
+                        <td class="py-2 px-2 text-blue-500 font-bold">Unit</td>
+                        <td class="py-2 px-2"><span class="bg-yellow-100 text-yellow-700 px-2 py-1 rounded text-xs">${status}</span></td>
+                    </tr>`;
+                } else if (item) {
+                    itemsHtml += `<tr class="border-t">
+                        <td class="py-2 px-2">${item}</td>
+                        <td class="py-2 px-2">1</td>
+                        <td class="py-2 px-2 text-blue-500 font-bold">Unit</td>
+                        <td class="py-2 px-2"><span class="bg-yellow-100 text-yellow-700 px-2 py-1 rounded text-xs">${status}</span></td>
+                    </tr>`;
+                }
+            });
+            document.getElementById('modalItemsTable').innerHTML = itemsHtml;
+            document.getElementById('requestModal').classList.remove('hidden');
+        });
+    });
+    document.getElementById('closeModalBtn').onclick = function() {
+        document.getElementById('requestModal').classList.add('hidden');
+    };
+    window.addEventListener('keydown', function(e) {
+        if (e.key === 'Escape') document.getElementById('requestModal').classList.add('hidden');
+    });
+    </script>
 </body>
 </html>
