fixed some mistakes in canva corrections,

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -143,7 +143,7 @@
                                 </td>
                                 <td class="border p-2">
                                     <a href="#" class="text-blue-600 hover:underline text-xs font-semibold mr-2">View</a>
-                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Approve</a>
+                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Endorse</a>
                                     <a href="#" class="text-red-600 hover:underline text-xs font-semibold">Reject</a>
                                 </td>
                             </tr>
@@ -164,7 +164,7 @@
                                 </td>
                                 <td class="border p-2">
                                     <a href="#" class="text-blue-600 hover:underline text-xs font-semibold mr-2">View</a>
-                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Approve</a>
+                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Endorse</a>
                                     <a href="#" class="text-red-600 hover:underline text-xs font-semibold">Reject</a>
                                 </td>
                             </tr>
@@ -185,7 +185,7 @@
                                 </td>
                                 <td class="border p-2">
                                     <a href="#" class="text-blue-600 hover:underline text-xs font-semibold mr-2">View</a>
-                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Approve</a>
+                                    <a href="#" class="text-green-600 hover:underline text-xs font-semibold mr-2">Endorse</a>
                                     <a href="#" class="text-red-600 hover:underline text-xs font-semibold">Reject</a>
                                 </td>
                             </tr>
