added account conditional

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 window.location.href = 'user-login.html';
             } else if (email === 'finance01@uc-crms.com') {
                 window.location.href = 'finance-dashboard.html';
-            } else {
+            }else if (email ==='purchasing01@uc-crms.com') {
+                window.location.href = 'purchasing-login.html';
+            }else {
                 alert('Wrong password');
             }
         });
