fixed user side

--- a/user-browse-inventory.html
+++ b/user-browse-inventory.html
@@ -67,7 +67,7 @@
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Property Number</th>
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Date Acquired</th>
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">SLR Number</th>
-                                <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Asset Account Form Number</th>
+                                <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Asset Accountability Form Number</th>
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Item Description</th>
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Category</th>
                                 <th class="px-4 py-2 border-b text-left text-sm font-semibold text-gray-700">Quantity</th>
