--- a/user-new-request.html
+++ b/user-new-request.html
@@ -258,10 +258,10 @@
                 <div class="mt-6 border-t pt-6">
                     <h3 class="text-lg font-bold mb-4">Can't find what you need?</h3>
                     <p class="text-gray-600 mb-4">Add a custom item request below:</p>
-                    <div class="grid grid-cols-2 gap-4">
-                        <input type="text" placeholder="Item name" class="border rounded px-4 py-2 w-full">
-                        <input type="number" placeholder="Quantity" class="border rounded px-4 py-2 w-full">
-                        <select class="border rounded px-4 py-2 w-full">
+                    <div class="flex gap-4 items-center">
+                        <input type="text" placeholder="Item name" class="border rounded px-4 py-2 w-full max-w-xs">
+                        <input type="number" placeholder="Quantity" class="border rounded px-4 py-2 w-28">
+                        <select class="border rounded px-4 py-2 w-32">
                             <option value="">Select unit...</option>
                             <option value="pcs">pcs</option>
                             <option value="box">box</option>
@@ -302,7 +302,7 @@
                 <div class="bg-gray-50 rounded p-6 mb-2">
                     <div class="grid grid-cols-2 gap-4 text-sm">
                         <div>
-                            <div class="text-gray-500">Request Title:</div>
+                            <div class="text-gray-500">Activity Title:</div>
                             <div class="font-semibold" id="modalReqTitle">-</div>
                         </div>
                         <div>
@@ -310,11 +310,11 @@
                             <div class="font-semibold" id="modalReqType">-</div>
                         </div>
                         <div>
-                            <div class="text-gray-500">Department:</div>
+                            <div class="text-gray-500">Charge To:</div>
                             <div class="font-semibold" id="modalDepartment">-</div>
                         </div>
                         <div>
-                            <div class="text-gray-500">Delivery Location:</div>
+                            <div class="text-gray-500">Priority Level:</div>
                             <div class="font-semibold" id="modalDeliveryLoc">-</div>
                         </div>
                         <div>
