fixed last revisions

--- a/user-reports.html
+++ b/user-reports.html
@@ -30,7 +30,7 @@
                 <li><a href="user-new-request.html" class="block py-2 px-4 rounded hover:bg-green-700">New Request</a></li>
                 <li><a href="user-requests.html" class="block py-2 px-4 rounded hover:bg-green-700">My Requests</a></li>
                 <li><a href="user-browse-inventory.html" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
-                <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
+                <li><a href="user-reports.html" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
                 <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Help</a></li>
                 <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Settings</a></li>
             </ul>
