--- a/user-new-request.html
+++ b/user-new-request.html
@@ -30,7 +30,7 @@
                     <li><a href="#" class="block py-2 px-4 rounded bg-green-700">New Request</a></li>
                     <li><a href="user-requests.html" class="block py-2 px-4 rounded hover:bg-green-700">My Requests</a></li>
                     <li><a href="user-browse-inventory.html" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
-                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
+                    <li><a href="user-reports.html" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Help</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Settings</a></li>
                 </ul>
@@ -56,6 +56,23 @@
                     </button>
                 </div>
             </header>
+
+            <!-- Search Bar -->
+            <div class="mb-6 flex w-full space-x-4">
+                <div class="relative flex-grow">
+                    <input type="text" 
+                           placeholder="Search for items in Logistics Management Office Inventory" 
+                           class="w-full px-4 py-2 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent">
+                    <div class="absolute inset-y-0 left-0 flex items-center pl-3">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                        </svg>
+                    </div>
+                </div>
+                <button class="bg-green-600 hover:bg-green-700 text-white font-medium py-2 px-4 rounded-lg transition duration-200 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
+                    Search
+                </button>
+            </div>
 
             <!-- Form Section -->
             <section class="bg-white p-6 rounded shadow">
